project basic settings

--- a/src/styles/postcss/base/@desktop-first/_common@desktop-first.css
+++ b/src/styles/postcss/base/@desktop-first/_common@desktop-first.css
@@ -13,14 +13,18 @@
 */
 
 ::selection {
-  background-color: $color-primary;
-  color: $color-white;
+  background-color: var(--color-primary);
+  color: var(--color-white);
 }
 
 body {
-  padding: 30px;
+  min-height: 100vh;
+  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: var(--color-gray-dark-2);
 
-  @mixin atMedium {
+  /* @mixin atMedium {
     padding: 0;
-  }
+  } */
 }
