added header section

--- a/src/styles/postcss/main.css
+++ b/src/styles/postcss/main.css
@@ -84,17 +84,6 @@
 /* COMPONENTS > REUSABLE/PLUGABLE BLOCKS
   > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > >
   ------------------------------------------------------------------------------------------------------------- */
-/* @import "../../app/components/responsive-image/_responsive-image.component.css"; */
-/* @import "../../app/components/logo-box/_logo-box.component.css"; */
-/* @import "../../app/components/button/_button.component.css"; */
-/* @import "../../app/components/heading-primary/_heading-primary.component.css"; */
-/* @import "../../app/components/heading-secondary/_heading-secondary.component.css"; */
-/* @import "../../app/components/heading-tertiary/_heading-tertiary.component.css"; */
-/* @import "../../app/components/paragraph/_paragraph.component.css"; */
-/* @import "../../app/components/composition/_composition.component.css"; */
-/* @import "../../app/components/feature-box/_feature-box.component.css"; */
-/* @import "../../app/components/card/_card.component.css"; */
-/* @import "../../app/components/story/_story.component.css"; */
-/* @import "../../app/components/bg-video/_bg-video.component.css"; */
-/* @import "../../app/components/form-booking/_form-booking.component.css"; */
-/* @import "../../app/components/menu/_menu.component.css"; */
+@import "./components/_logo.component.css";
+@import "./components/_search.component.css";
+@import "./components/_user-nav.component.css";
