--- a/src/styles/postcss/base/layouts/_section.layout.css
+++ b/src/styles/postcss/base/layouts/_section.layout.css
@@ -26,6 +26,10 @@
   background-color: var(--color-gray-dark-1);
 
   flex: 0 0  18%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
@@ -33,6 +37,8 @@
   background-color: orangered;
 
   flex: 1;
+
+  height: 60rem;
 }
 
 .section {
