added section overview

--- a/src/styles/postcss/base/layouts/_section.layout.css
+++ b/src/styles/postcss/base/layouts/_section.layout.css
@@ -11,7 +11,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-gray-light-2);
+  border-bottom: solid 1px var(--color-gray-light-2);
 
   display: flex;
   justify-content: space-between;
@@ -34,45 +34,6 @@
 
 .hotel-view {
   background-color: #fff;
-  background-color: orangered;
-
   flex: 1;
-
   height: 60rem;
-}
-
-.section {
-  /* SECTIONS PADDING MODIFIERS */
-  /* &--p-none {
-    padding: 0;
-  } */
-
-  /* SECTIONS BACKGROUND MODIFIERS */
-  /* &--bg-hero {
-    background-color: var(--color-dark-gray);
-    height:
-  } */
-
-  /* &--bg-footer {
-    background-color: var(--color-dark-gray);
-  } */
-
-  /* &--bg-features {
-    background: linear-gradient(0deg, rgba(243, 72, 104, 0.9) 20.58676945993915%, rgba(242, 71, 104, 0.9) 20.58676945993915%, var(--color-dark-purple) 80.58772027129817%), url("/assets/images/puzzle.svg") top center repeat;
-    background-attachment: fixed;
-
-    @mixin atLarge {
-      &.lazyloaded {
-      }
-    }
-  } */
-
-  /* &--bg-typography {
-    background-color: var(--color-codepen-dark);
-  } */
-
-  /* &--bg-instructions {
-    background: linear-gradient(-120deg, rgba(243, 72, 104, 0.9) 20.58676945993915%, rgba(242, 71, 104, 0.9) 20.58676945993915%, var(--color-dark-purple) 80.58772027129817%);
-    background-attachment: fixed;
-  } */
 }
