--- a/src/styles/postcss/main.css
+++ b/src/styles/postcss/main.css
@@ -74,3 +74,6 @@
 @import "./components/_user-nav.component.css";
 @import "./components/_side-nav.component.css";
 @import "./components/_legal.component.css";
+@import "./components/_gallery.component.css";
+@import "./components/_overview.component.css";
+@import "./components/_btn-inline.component.css";
