--- a/src/styles/postcss/base/layouts/_section.layout.css
+++ b/src/styles/postcss/base/layouts/_section.layout.css
@@ -2,7 +2,7 @@
   max-width: 120rem;
   margin: 8rem auto;
   background-color: var(--color-gray-light-1);
-  box-shadow: var(--color-shadow-dark);
+  box-shadow: var(--shadow-dark);
 
   min-height: 50rem;
 }
@@ -11,7 +11,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: solid 1px var(--color-gray-light-2);
+  border-bottom: var(--line);
 
   display: flex;
   justify-content: space-between;
@@ -35,5 +35,25 @@
 .hotel-view {
   background-color: #fff;
   flex: 1;
-  height: 60rem;
+}
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-gray-light-1);
+  border-top: var(--line);
+}
+
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+}
+
+.user-review {
+  background-color: gold;
+  flex: 1;
 }
