--- a/src/styles/postcss/components/_overview.component.css
+++ b/src/styles/postcss/components/_overview.component.css
@@ -1,7 +1,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: solid 1px var(--color-gray-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     font-size: 2.25rem;
