added review section

--- a/src/styles/postcss/main.css
+++ b/src/styles/postcss/main.css
@@ -80,4 +80,4 @@
 @import "./components/_paragraph.component.css";
 @import "./components/_list.component.css";
 @import "./components/_recommend.component.css";
-@import "./components/_user-review.component.css";
+@import "./components/_review.component.css";
