--- a/src/styles/postcss/base/layouts/_section.layout.css
+++ b/src/styles/postcss/base/layouts/_section.layout.css
@@ -38,6 +38,7 @@
 }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-gray-light-1);
@@ -45,7 +46,6 @@
 }
 
 .description {
-  font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
@@ -53,7 +53,9 @@
   margin-right: 4.5rem;
 }
 
-.user-review {
-  background-color: gold;
+.user-reviews {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
