--- a/src/styles/postcss/components/_btn-inline.component.css
+++ b/src/styles/postcss/components/_btn-inline.component.css
@@ -9,9 +9,19 @@
   cursor: pointer;
   transform: all 0.2s;
 
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
+
   &:hover {
     color: var(--color-gray-dark-1);
+
+    & span {
+      margin-left: 8px;
+    }
   }
+
   &:focus {
     outline: none;
     animation: pulsate 1s infinite;
