--- a/src/styles/postcss/components/_recommend.component.css
+++ b/src/styles/postcss/components/_recommend.component.css
@@ -10,7 +10,7 @@
   }
 
   &__friends {
-    /* X */
+    display: flex;
   }
 
   &__photo {
@@ -21,7 +21,7 @@
     border: 3px solid #fff;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
