--- a/src/styles/postcss/main.css
+++ b/src/styles/postcss/main.css
@@ -20,6 +20,7 @@
   > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > > >
   ------------------------------------------------------------------------------------------------------------- */
 /* @import "mixins/_media-queries.mixins.css"; */
+@import "mixins/media/_@smallest.media.css";
 @import "mixins/media/_@small.media.css";
 @import "mixins/media/_@medium.media.css";
 @import "mixins/media/_@large.media.css";
