--- a/src/styles/postcss/components/_cta.component.css
+++ b/src/styles/postcss/components/_cta.component.css
@@ -2,6 +2,10 @@
   padding: 3.5rem 0;
   text-align: center;
 
+  @mixin atMedium {
+    padding: 2.5 0;
+  }
+
   &__book-now {
     font-size: 2rem;
     font-weight: 300;
