--- a/src/styles/postcss/components/_review.component.css
+++ b/src/styles/postcss/components/_review.component.css
@@ -6,6 +6,11 @@
   position: relative;
   overflow: hidden;
 
+  @mixin atMedium {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
+
   &__text {
     margin-bottom: 2rem;
     position: relative;
